# awesome-GP

./: 2.2.basic_lighting.fs  2.2.basic_lighting.vs  2.2.light_cube.fs  2.2.light_cube.vs  CMakeLists.txt  Makefile  advance.fs  advance.vs  imgui.ini  light.cpp  main copy.cpp  main.cpp  multiple_lights.fs
cmake/modules/.svn/: wc.db
dependencies/include/: root_directory.h
dependencies/include/GLFW/: ._glfw3.h
dependencies/include/KHR/: ._khrplatform.h
dependencies/include/glad/: CMakeLists.txt  glad.c  glad.h
dependencies/include/glm/ext/: ._matrix_uint2x4.hpp
dependencies/include/imgui/: imgui_demo.cpp
learnopengl/: model.h
lib/.svn/: wc.db
misc/freetype/: imgui_freetype.cpp
resources/objects/city/: city.mtl
